# model/randomforest.py
@@ -5,33 +5,35 @@ import logging
 logging.basicConfig(level=logging.INFO)
 logger = logging.getLogger(__name__)
 
+
 class RandomForest(Model):
-	"""
-	Class to perform RandomForest
-	"""
-	def __init__(self, *args, **kwargs):
-		"""
-		Initialize local parameters and then call the base class for the remaining
-		"""
-		if 'n_estimators' in kwargs:
-			self.n_estimators = kwargs['n_estimators']
-		else:
-			self.n_estimators = 10
+    """
+    Class to perform RandomForest
+    """
 
-		logger.info('n_estimators: {}'.format(self.n_estimators))
+    def __init__(self, *args, **kwargs):
+        """
+        Initialize local parameters and then call the base class for the remaining
+        """
+        if 'n_estimators' in kwargs:
+            self.n_estimators = kwargs['n_estimators']
+        else:
+            self.n_estimators = 10
 
-		super(RandomForest,self).__init__(*args, **kwargs)
+        logger.info('n_estimators: {}'.format(self.n_estimators))
 
-	def run(self):
-		# Run standard processes to get the data
-		super(RandomForest,self).run()
+        super(RandomForest, self).__init__(*args, **kwargs)
 
-		# Run Random Forest
-		forest = RandomForestClassifier(criterion='entropy',
-       		n_estimators=self.n_estimators,
-            random_state=1,
-            n_jobs=2)
-		
-		forest.fit(self.X_scale_train, self.y_train)
-		self.train_accuracy = forest.score(self.X_scale_train, self.y_train)
-		self.test_accuracy = forest.score(self.X_scale_test, self.y_test)
+    def run(self):
+        # Run standard processes to get the data
+        super(RandomForest, self).run()
+
+        # Run Random Forest
+        forest = RandomForestClassifier(criterion='entropy',
+                                        n_estimators=self.n_estimators,
+                                        random_state=1,
+                                        n_jobs=2)
+
+        forest.fit(self.X_scale_train, self.y_train)
+        self.train_accuracy = forest.score(self.X_scale_train, self.y_train)
+        self.test_accuracy = forest.score(self.X_scale_test, self.y_test)
